--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dot(v1, v2):\n",
+    "    return sum(x*y for x,y in zip(v1,v2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math as m\n",
+    "def norm(v):\n",
+    "    sum = 0\n",
+    "    for n in range(len(v)):\n",
+    "        sum += v[n]**2\n",
+    "    return (m.sqrt(sum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cosdistance(r1,r2):\n",
+    "    return (dot(r1,r2)/(norm(r1)*norm(r2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": true
@@ -98,15 +147,15 @@
    "outputs": [],
    "source": [
     "def cosd(a,b):\n",
-    "        dot_product = np.dot(a, b)\n",
-    "        norm_a = np.linalg.norm(a)\n",
-    "        norm_b = np.linalg.norm(b)\n",
-    "        return dot_product / (norm_a * norm_b)"
+    "    dot_product = np.dot(a, b)\n",
+    "    norm_a = np.linalg.norm(a)\n",
+    "    norm_b = np.linalg.norm(b)\n",
+    "    return dot_product / (norm_a * norm_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +189,45 @@
    "source": [
     "sentence1 = A[0]\n",
     "for i in range(len(A)-1):\n",
-    "    print(cosd(sentence1,np.array(A[i+1])))"
+    "    print(cosdistance(sentence1,np.array(A[i+1])))\n",
+    "#     print(cosd(sentence1,np.array(A[i+1])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,6 +235,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
