--- a/ML Lab 5/Lab3rus.ipynb
+++ b/ML Lab 5/Lab3rus.ipynb
@@ -2440,14 +2440,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('amazon.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ACTION</th>\n",
+       "      <th>RESOURCE</th>\n",
+       "      <th>MGR_ID</th>\n",
+       "      <th>ROLE_ROLLUP_1</th>\n",
+       "      <th>ROLE_ROLLUP_2</th>\n",
+       "      <th>ROLE_DEPTNAME</th>\n",
+       "      <th>ROLE_TITLE</th>\n",
+       "      <th>ROLE_FAMILY_DESC</th>\n",
+       "      <th>ROLE_FAMILY</th>\n",
+       "      <th>ROLE_CODE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>39353</td>\n",
+       "      <td>85475</td>\n",
+       "      <td>117961</td>\n",
+       "      <td>118300</td>\n",
+       "      <td>123472</td>\n",
+       "      <td>117905</td>\n",
+       "      <td>117906</td>\n",
+       "      <td>290919</td>\n",
+       "      <td>117908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>17183</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>117961</td>\n",
+       "      <td>118343</td>\n",
+       "      <td>123125</td>\n",
+       "      <td>118536</td>\n",
+       "      <td>118536</td>\n",
+       "      <td>308574</td>\n",
+       "      <td>118539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>36724</td>\n",
+       "      <td>14457</td>\n",
+       "      <td>118219</td>\n",
+       "      <td>118220</td>\n",
+       "      <td>117884</td>\n",
+       "      <td>117879</td>\n",
+       "      <td>267952</td>\n",
+       "      <td>19721</td>\n",
+       "      <td>117880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>36135</td>\n",
+       "      <td>5396</td>\n",
+       "      <td>117961</td>\n",
+       "      <td>118343</td>\n",
+       "      <td>119993</td>\n",
+       "      <td>118321</td>\n",
+       "      <td>240983</td>\n",
+       "      <td>290919</td>\n",
+       "      <td>118322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>42680</td>\n",
+       "      <td>5905</td>\n",
+       "      <td>117929</td>\n",
+       "      <td>117930</td>\n",
+       "      <td>119569</td>\n",
+       "      <td>119323</td>\n",
+       "      <td>123932</td>\n",
+       "      <td>19793</td>\n",
+       "      <td>119325</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ACTION  RESOURCE  MGR_ID  ROLE_ROLLUP_1  ROLE_ROLLUP_2  ROLE_DEPTNAME  \\\n",
+       "0       1     39353   85475         117961         118300         123472   \n",
+       "1       1     17183    1540         117961         118343         123125   \n",
+       "2       1     36724   14457         118219         118220         117884   \n",
+       "3       1     36135    5396         117961         118343         119993   \n",
+       "4       1     42680    5905         117929         117930         119569   \n",
+       "\n",
+       "   ROLE_TITLE  ROLE_FAMILY_DESC  ROLE_FAMILY  ROLE_CODE  \n",
+       "0      117905            117906       290919     117908  \n",
+       "1      118536            118536       308574     118539  \n",
+       "2      117879            267952        19721     117880  \n",
+       "3      118321            240983       290919     118322  \n",
+       "4      119323            123932        19793     119325  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "data = pd.read_csv('amazon.csv')"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3456,7 +3606,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# data.groupby(['ACTION','RESOURCE']).count()\n",
