--- a/ML Lab 5/Lab5_Beka.ipynb
+++ b/ML Lab 5/Lab5_Beka.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: Arthur Belyankov\n",
+    "Name: Kattabekov Beknur\n",
     "\n",
-    "Student ID: 16BD02060\n",
+    "Student ID: 16BD02079\n",
     "\n",
-    "Email: arthurbelyankove@gmail.com"
+    "Email: kattabekovbeknur@gmail.com"
    ]
   },
   {
