--- a/ML Lab 5/Lab5_Beka.ipynb
+++ b/ML Lab 5/Lab5_Beka.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: Kattabekov Beknur\n",
+    "Name: Kattabekov Beknur Nuralkhanuli\n",
     "\n",
     "Student ID: 16BD02079\n",
     "\n",
