--- a/Lab7.ipynb
+++ b/Lab7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    T2 = A.transpose().dot(A)\n",
     "    u_v, U = np.linalg.eig(T1)\n",
     "    v_v, V = np.linalg.eig(T2)\n",
-    "    D = np.diag(u_v)\n",
+    "    D = np.diag(np.sqrt(u_v))\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            U[j][i] = U[j][i]/np.linalg.norm(U[:,i])\n",
@@ -37,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-121.43754317, -122.45095813, -104.39648881],\n",
-       "       [ -93.79258857,  -87.64131857,  -85.45351367],\n",
-       "       [-157.35905897, -162.16893085, -138.0183688 ]])"
+       "array([[ 4.27716447,  7.1839214 ,  5.9242837 ],\n",
+       "       [ 0.10741601,  9.51687766, -0.64614344],\n",
+       "       [ 2.77386479,  4.77706111,  8.91545631]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,27 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.randint(1,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +70,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,18 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8., 10.,  3.],\n",
-       "       [ 9.,  6.,  5.],\n",
-       "       [ 2.,  7.,  7.]])"
+       "array([[ 1.,  8.,  4.],\n",
+       "       [ 3., 10.,  1.],\n",
+       "       [ 5.,  2.,  1.]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +156,7 @@
        "       [2., 2., 2.]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +180,7 @@
        "array([8.00000000e+00, 1.28830323e-16, 2.00000000e+00])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,24 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[8.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [0.00000000e+00, 1.28830323e-16, 0.00000000e+00],\n",
-       "       [0.00000000e+00, 0.00000000e+00, 2.00000000e+00]])"
+       "array([[2.82842712e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [0.00000000e+00, 1.13503446e-08, 0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 1.41421356e+00]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.diag(x)"
+    "np.diag(np.sqrt(x))"
    ]
   },
   {
